--- a/.babelrc
+++ b/.babelrc
@@ -13,6 +13,7 @@
           "~": "./src",
           "~components": "./src/components",
           "~contexts": "./src/contexts",
+          "~hooks": "./src/hooks",
           "~utils": "./src/utils",
           /* *****  modules *****  */
           "~Auth": "./src/modules/Auth",
