--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "node scripts/test.js --env=jsdom"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.5.0",
     "babel-eslint": "10.0.1",
     "babel-plugin-styled-components": "^1.10.6",
     "enzyme": "^3.10.0",
@@ -26,6 +27,7 @@
   "dependencies": {
     "@babel/core": "7.4.3",
     "@svgr/webpack": "4.1.0",
+    "@testing-library/react": "^10.0.3",
     "@typescript-eslint/eslint-plugin": "1.6.0",
     "@typescript-eslint/parser": "1.6.0",
     "babel-jest": "^24.8.0",
