wip speira/feat - update components base

--- a/.babelrc
+++ b/.babelrc
@@ -24,7 +24,8 @@
     ],
     ["babel-plugin-styled-components", {
       "ssr": true,
-      "displayName": true
+      "displayName": true,
+      "fileName": false
     }]
   ]
 }
