--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 {
   "arrowParens": "always",
   "endOfLine":"auto",
-  "jsxBracketSameLine": true,
+  "bracketSameLine": true,
   "semi": false,
   "singleQuote": true,
   "trailingComma": "all"
