--- a/package.json
+++ b/package.json
@@ -144,6 +144,10 @@
       "jsx",
       "node"
     ],
+    "moduleNameMapper": {
+      "^~(.+)Module(.*)$": "<rootDir>/src/modules/$1Module$2",
+      "^~(.+)$": "<rootDir>/src/$1"
+    },
     "watchPlugins": [
       "jest-watch-typeahead/filename",
       "jest-watch-typeahead/testname"
