--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "file-loader": "^6.2.0",
     "fs-extra": "^10.0.0",
     "html-webpack-plugin": "^5.5.0",
+    "i18next": "^21.9.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.4.3",
     "jest-resolve": "^27.4.2",
@@ -69,6 +70,7 @@
     "react-app-polyfill": "^3.0.0",
     "react-dev-utils": "^12.0.1",
     "react-dom": "^18.1.0",
+    "react-i18next": "^11.18.3",
     "react-is": "^18.2.0",
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.3.0",
